# verina

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  README.md  Verina.lean  docker-compose.yaml  lake-manifest.json  lakefile.lean  prefect.toml  pyproject.toml  setup-dev.sh
analy_scripts/: analysis.py  filter.py
configs/: claude-sonnet3.7-proof.toml  claude-sonnet3.7.toml  deepseek-v3.toml  dsprover2-7b.toml  gemini-2.5-flash-proof.toml  gemini-2.5-flash.toml  gpt-4.1-proof.toml  gpt-4.1.toml  gpt-4o-mini-proof.toml  gpt-4o-mini.toml  gpt-4o.toml  o4-mini-proof.toml  o4-mini.toml  qa.toml  qwen-3-235b-a22b-fp8.toml
configs/proof_high_pass/: claude-sonnet3.7.toml  gemini-2.5-flash.toml  gpt-4.1.toml  o4-mini.toml
datasets/verina/: coverage_data.json
datasets/verina/verina_advanced_1/: coverage_report.md  description.txt  reject_inputs.json  signature.json  task.json  task.lean  test.json
datasets/verina/verina_advanced_10/: coverage_report.md  description.txt  reject_inputs.json  signature.json  task.json  task.lean  test.json
datasets/verina/verina_advanced_11/: coverage_report.md  description.txt  signature.json  task.json  task.lean  test.json
datasets/verina/verina_advanced_12/: coverage_report.md  description.txt  signature.json  task.json  task.lean  test.json
datasets/verina/verina_advanced_13/: coverage_report.md  description.txt  reject_inputs.json  signature.json  task.json  task.lean  test.json
datasets/verina/verina_advanced_14/: signature.json  (+5 more)
scripts/: benchmark.py  create_hf_dataset.py  quality_assurance.py
(+1079 files in other folders)
