[project]
name = "verina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LEAFERx", email = "leaferx@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.0",
    "dspy>=2.6.23",
    "google-cloud-aiplatform>=1.92.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langfuse>=2.60.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "prefect==3.4.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "vllm>=0.8.0",
]

[project.scripts]
verina = "verina:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
]

[tool.ruff]
extend-exclude = ["datasets"]
